Fix Plain Mode empty product covers

--- a/src/plain-design.css
+++ b/src/plain-design.css
@@ -1619,6 +1619,13 @@ h2 {
   box-shadow: inset 0 0 0 3px #fff7ed, 0 0 0 2px rgba(159, 118, 88, 0.12);
 }
 
+.table-product-image-empty {
+  display: inline-block;
+  width: 42px;
+  height: 42px;
+  vertical-align: middle;
+}
+
 .table-product-name {
   display: block;
   max-width: 145px;
